[gd_scene load_steps=5 format=2]

[ext_resource path="res://niveles/nivel_4_romper_objetos/breakable_item.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/breakable_barrel.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 25 )

[node name="breakable_item" type="RigidBody2D" groups=["entity"]]
collision_layer = 2
collision_mask = 2
gravity_scale = 2.0
script = ExtResource( 1 )
explosion_force = 450

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 2 )
animation = "idle"
speed_scale = 2.0
playing = true

[node name="CollisionShape2D_box" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D_barrel" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 3 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
